--- a/app/src/main/res/layout/item_article.xml
+++ b/app/src/main/res/layout/item_article.xml
@@ -4,7 +4,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="15dp" >
+    android:layout_margin="10dp"
+    android:padding="15dp"
+    android:background="@drawable/bg_round_corner"
+    android:elevation="10dp"
+    android:foreground="?selectableItemBackground" >
 
     <ImageView
         android:id="@+id/item_article_image"
@@ -24,6 +28,7 @@
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginStart="15dp"
         android:textSize="15sp"
+        android:textStyle="bold"
         android:maxLines="1" />
 
     <TextView
